--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ google-auth-httplib2>=0.1.0
 google-auth-oauthlib>=0.5.0
 google-api-python-client>=2.70.0
 python-dotenv>=1.0.0
+selenium>=4.0.0
+beautifulsoup4>=4.9.0
+requests>=2.25.0
